--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
   },
   "homepage": "https://github.com/JDGonzal/AI-Chatbot-Code-Challenge#readme",
   "dependencies": {
+    "@pinecone-database/pinecone": "6.1.2",
+    "axios": "1.11.0",
     "bcryptjs": "3.0.2",
+    "cheerio": "1.1.2",
     "cors": "2.8.5",
     "dotenv": "17.2.1",
     "express": "5.1.0",
-    "jsonwebtoken": "9.0.2"
+    "jsonwebtoken": "9.0.2",
+    "openai": "5.10.2"
   },
   "devDependencies": {
     "nodemon": "3.1.10"
