--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "[AI_Chatbot_Code_Challenge(20250723)](\r https://docs.google.com/document/d/1zZCIyEbKMMtyfb0tmi_OF0-P2THC3_Jp_qK894VxS1w/edit?tab=t.0)",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "dev": "nodemon server.js",
     "start": "node server.js"
   },
@@ -31,6 +33,39 @@
     "openai": "5.10.2"
   },
   "devDependencies": {
-    "nodemon": "3.1.10"
+    "nodemon": "3.1.10",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.4",
+    "@babel/preset-env": "^7.24.0",
+    "@babel/core": "^7.24.0"
+  },
+  "jest": {
+    "preset": "@babel/preset-env",
+    "testEnvironment": "node",
+    "transform": {
+      "^.+\\.js$": "babel-jest"
+    },
+    "testMatch": [
+      "**/tests/**/*.test.js"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/tests/setup.js"
+    ],
+    "collectCoverageFrom": [
+      "controllers/**/*.js",
+      "middleware/**/*.js",
+      "services/**/*.js",
+      "routes/**/*.js"
+    ],
+    "coverageDirectory": "coverage",
+    "coverageReporters": ["text", "lcov", "html"],
+    "coverageThreshold": {
+      "global": {
+        "branches": 80,
+        "functions": 80,
+        "lines": 80,
+        "statements": 80
+      }
+    }
   }
 }
