--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,7 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
+  ACR_REGISTRY: ${{ vars.ACR_REGISTRY_NAME }}.azurecr.io
 
 jobs:
   test:
@@ -35,14 +36,10 @@ jobs:
       with:
         version: latest
         
-    - name: Get pnpm store directory
-      shell: bash
-      run: echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
-        
     - name: Setup pnpm cache
       uses: actions/cache@v3
       with:
-        path: ${{ env.STORE_PATH }}
+        path: ~/.pnpm-store
         key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
         restore-keys: |
           ${{ runner.os }}-pnpm-store-
@@ -72,9 +69,10 @@ jobs:
         PINECONE_API_KEY: test-pinecone-key
         
     - name: Upload coverage reports
+      if: ${{ vars.ENABLE_CODECOV == 'true' }}
       uses: codecov/codecov-action@v3
       with:
-        token: ${{ secrets.CODECOV_TOKEN }}
+        token: ${{ vars.CODECOV_TOKEN }}
         files: ./coverage/lcov.info
         flags: unittests
         name: codecov-umbrella
@@ -137,12 +135,13 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
         
-    - name: Log in to Docker Hub
+    - name: Log in to Azure Container Registry
       if: github.event_name != 'pull_request'
       uses: docker/login-action@v3
       with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+        registry: ${{ env.ACR_REGISTRY }}
+        username: ${{ vars.ACR_USERNAME }}
+        password: ${{ vars.ACR_PASSWORD }}
         
     - name: Extract metadata
       id: meta
@@ -150,7 +149,7 @@ jobs:
       with:
         images: |
           ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          ${{ secrets.DOCKERHUB_USERNAME }}/ai-chatbot
+          ${{ env.ACR_REGISTRY }}/ai-chatbot
         tags: |
           type=ref,event=branch
           type=ref,event=pr
