--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
   },
   "devDependencies": {
     "nodemon": "3.1.10",
-    "jest": "^29.7.0",
-    "supertest": "^7.1.4",
-    "@babel/preset-env": "^7.24.0",
-    "@babel/core": "^7.28.4"
+    "jest": "29.7.0",
+    "supertest": "7.1.4",
+    "@babel/preset-env": "7.24.0",
+    "@babel/core": "7.28.4"
   }
 }
